<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="listaTotal">Lista Total</string>
    <string name="addItemActivityTitle">Agregar ítem</string>
    <string name="addItemActivityTitleEdit">Editar ítem</string>
    <string name="addItemActivityTvAddItem">Descripción</string>
    <string name="addItemActivityTvCantidad">Cantidad</string>
    <string name="addItemActivityEtAddItemTooltip">Artículo a comprar</string>
    <string name="addItemActivityCbListaCompras">Agregar a la lista de compras</string>
    <string name="buttonAceptar">Aceptar</string>
    <string name="buttonCancelar">Cancelar</string>
    <string name="itemYaExiste">¡Ya existe ese ítem!</string>
    <string name="itemAgregado">agregado.</string>
    <string name="errorDescripcionVacia">Debe escribir una descripción para el ítem</string>
    <string name="errorItemEnListaCompras">No puede editar un ítem que está en la lista de compras</string>
    <string name="om_reset_compras">Vaciar lista de compras</string>
    <string name="om_export_bbdd">Exportar BBDD</string>
    <string name="om_import_bbdd">Importar BBDD</string>
    <string name="fileNotFound">Archivo no encontrado</string>
    <string name="errorUnknown">Ha ocurrido un error desconocido</string>
    <string name="exportOk">La exportación de la base de datos ha sido exitosa</string>
    <string name="importOk">La importación a la base de datos ha sido exitosa</string>
    <string name="errorMediaNotMounted">No hay tarjeta SD</string>
    <string name="changeVisibleList">Cambiar de lista</string>
    <string name="tabComprasTitle">COMPRAS</string>
    <string name="tabTotalTitle">TOTAL</string>
    <string name="queryHint">Buscar ítem</string>
    <string name="reset_compras_alert_title">Vaciar lista de compras</string>
    <string name="reset_compras_alert_msg">¿Está seguro que desea vaciar la lista de compras?</string>
    <string name="reset_compras_success">La lista de compras se ha vaciado con éxito</string>
    <string name="confirmDeleteImage">¿Confirma que desea ELIMINAR la imagen del producto?</string>
    <string name="deleteImageYes">Eliminar Imagen</string>
    <string name="permissions_granted">Ahora puede agregar imágenes a los productos.</string>
    <string name="permissions">Permisos</string>
    <string name="permissions_message">Debe aceptar los permisos para agregar imágenes a los productos.</string>
    <string name="errorDeletingImage">Hubo un error borrando la imagen</string>
    <string name="om_text_bigger">Letras más grandes</string>
    <string name="om_text_smaller">Letras más pequeñas</string>
    <string name="biggest_text">Tamaño máximo de letra</string>
    <string name="smallest_text">Tamaño mínimo de letra</string>
</resources>
