<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_text_bigger"
        android:icon="@android:drawable/stat_sys_upload"
        android:orderInCategory="1"
        android:title="@string/om_text_bigger"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_text_smaller"
        android:icon="@android:drawable/stat_sys_download"
        android:orderInCategory="1"
        android:title="@string/om_text_smaller"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_reset_compras"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="1"
        android:title="@string/om_reset_compras"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_export_bbdd"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="2"
        android:title="@string/om_export_bbdd"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/menu_import_bbdd"
        android:orderInCategory="3"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/om_import_bbdd"
        app:showAsAction="withText"
        />
</menu>