<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.adriangalvarez.listadecompras.Activities.AddItemActivity"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:background="@color/primary_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/addItemActivityTvAddItem"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/textView"/>

        <EditText
            android:id="@+id/editTextDescripcion"
            android:inputType="textCapSentences"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_alignTop="@+id/textView"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/textView"
            android:tooltipText="@string/addItemActivityEtAddItemTooltip"/>

        <CheckBox
            android:id="@+id/checkBoxListaCompras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editTextDescripcion"
            android:layout_below="@+id/editTextDescripcion"
            android:layout_marginTop="30dp"
            android:text="@string/addItemActivityCbListaCompras"/>

        <EditText
            android:id="@+id/editTextCantidad"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/checkBoxListaCompras"
            android:layout_below="@+id/checkBoxListaCompras"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="number"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/textViewCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editTextCantidad"
            android:layout_marginTop="12dp"
            android:layout_toStartOf="@+id/editTextDescripcion"
            android:text="@string/addItemActivityTvCantidad"
            android:visibility="invisible"/>
    </RelativeLayout>

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:textColor="@color/primary_text"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/buttonAceptar"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/buttonAccept"
        android:background="@color/colorAccent"
        android:textColor="@color/primary_text"
        android:layout_marginRight="10dp"
        android:text="@string/buttonCancelar"/>
</RelativeLayout>
